--- a/index.html
+++ b/index.html
@@ -27,11 +27,69 @@
             <h1 class="banner_title">Brand New <br>
                 Group of Architects</h1>
             <p class="banner_description secondary_color secondary_font">You will get everything from the beginning of your <br/> journey until you get an internship or a full-time job.</p>
-            <button class="primary_button">Explore More</button>
+            <button class="primary_button banner_button">Explore More</button>
             <div>
                 <img src="images/banner.png" alt="">
             </div>
         </div>
     </header>
+
+    <!-- main -->
+    <main>
+        <!-- feature section -->
+        <section class="feature">
+            <div class="feature_image">
+                <img src="images/team1.png" alt="">
+                <img src="images/team2.png" alt="">
+                <img src="images/team3.png" alt="">
+                <img src="images/team4.png" alt="">
+            </div>
+
+            <div class="feature_intro">
+                <h1 class="feature_title primary_color primary_font">Quick list of Our <br>Features</h1>
+                <p class="feature_intro_descripiton secondary_color secondary_font">Dedicated 17+ Job Placement Managers <br/> will help you to find a job <br/> locally and internationally.</p>
+                <button class="primary_button">Explore More</button>
+            </div>
+        </section>
+
+        <!-- feature details section -->
+        <section class="feature_details conatianer">
+            <div class="feature_description">
+                <div>
+                    <div class="line">
+                        <h2 class="feature_details_title primary_color primary_font">Features you will <br/> love & enjoy</h2>
+                    </div>
+                    <div class="feature_details_description secondary_color secondary_font">
+                        <p>You can Join one to one live support sessions three <br/> times a day. It is guaranteed to get answers to <br/> every question within 10 hours.</p>
+                    </div>
+                </div>
+                    
+
+                <div class="feature_list">
+                    <div class="feature_list_info">
+                        <h4 class="list_title">Dexktop & Mobile Version</h4>
+                        <p class="secondary_font secondary_color">After completing the main course seriously <br> intime you will get access to SCIC (Super Charged Interviewee Club) <br> and ACC (Redux, Typescript, Node, Mongodb, Next.js)</p>
+                    </div>
+                    <div class="feature_list_info">
+                        <h4 class="list_title">Drag & Drop Builder</h4>
+                        <p class="secondary_font secondary_color">Watch course videos offlinein our mobile and <br> desktop app at your convenience.You Have To <br> Commit 6-8 Hours Everyday</p>
+                    </div>
+                    <div class="feature_list_info">
+                        <h4 class="list_title">Awesome Modern Design</h4>
+                        <p class="secondary_font secondary_color">After completing the main course seriously <br> intime you will get access to SCIC (Super Charged Interviewee Club) <br> and ACC (Redux, Typescript, Node, Mongodb, Next.js)</p>
+                    </div>
+                    <div class="feature_list_info">
+                        <h4 class="list_title">Super Easy to Edit</h4>
+                        <p class="secondary_font secondary_color">After completing the main course seriously <br> intime you will get access to SCIC (Super Charged Interviewee Club) <br> and ACC (Redux, Typescript, Node, Mongodb, Next.js)</p>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- feature details image -->
+            <div class="feature_details_image">
+                <img src="images/architect.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 </html>
