left sections and footer added

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
 
             <div class="feature_intro">
-                <h1 class="feature_title primary_color primary_font">Quick list of Our <br>Features</h1>
+                <h1 class="feature_title primary_color primary_font"><span class="secondary_color">Quick list</span> of Our <br><span class="word_color">Features</span></h1>
                 <p class="feature_intro_descripiton secondary_color secondary_font">Dedicated 17+ Job Placement Managers <br/> will help you to find a job <br/> locally and internationally.</p>
                 <button class="primary_button">Explore More</button>
             </div>
@@ -98,6 +98,76 @@
                 </div>
             </button>
         </div>
+
+        <!-- some fact section -->
+        <section class="some_fact">
+            <h1 class="primary_font primary_color some_fact_title">Some Fact</h1>
+            <p class="secondary_color secondary_font">I am leraning Web development at Programming Hero <br/>
+                I have already learned html & css</p>
+        </section>
+
+        <!-- statistics section -->
+        <section class="stat">
+            <div class="stat_info">
+                <img src="images/icons/ribon.png" alt="">
+                <h2 class="primary_font primary_color">54</h2>
+                <p class="secondary_color secondary_font ">Awards Winnings</p>
+            </div>
+            <div class="stat_info">
+                <img src="images/icons/projects.png" alt="">
+                <h2 class="primary_font primary_color">1458</h2>
+                <p class="secondary_color secondary_font ">Project Finished</p>
+            </div>
+            <div class="stat_info">
+                <img src="images/icons/customers.png" alt="">
+                <h2 class="primary_font primary_color">590</h2>
+                <p class="secondary_color secondary_font ">Clients Worked</p>
+            </div>
+            <div class="stat_info">
+                <img src="images/icons/email.png" alt="">
+                <h2 class="primary_font primary_color">22578</h2>
+                <p class="secondary_color secondary_font ">Email Send</p>
+            </div>
+        </section>
+
+        <!-- sponsor section -->
+        <section class="sponsor">
+            <div class="sponsor_info">
+                <h2 class="primary_color primary_font sponsor_title">Our Sponsors</h2>
+                <p class="secondary_color secondary_font">a person or organization that pays for or contributes to the costs involved <br/> in staging a sporting or artistic event in return for advertising.</p>
+            </div>
+
+            <div class="sponsors">
+                <img src="images/sponsors/spotify.png" alt="">
+                <img src="images/sponsors/amazon.png" alt="">
+                <img src="images/sponsors/google.png" alt="">
+                <img src="images/sponsors/telerama.png" alt="">
+                <img src="images/sponsors/figma.png" alt="">
+            </div>
+        </section>
+
+        <!-- personal section -->
+        <section class="personal_section">
+            <div class="personal_section_info">
+                <h4 class="primary_font personal_section_title">My Web Development Journey</h4>
+                <p class="personal_section_descripion">I made this simple responsive website. <br/> I have added some new things like Transition Transform Grid and Media     Query </p>
+                <h4 class="primary_font personal_section_title2">Roadmap</h4>
+            </div>
+
+            <div class="roadmap">
+                <img src="images/roadmap/1.png" alt="">
+                <img src="images/roadmap/2.png" alt="">
+                <img src="images/roadmap/3.png" alt="">
+                <img src="images/roadmap/4.png" alt="">
+                <img src="images/roadmap/5.png" alt="">
+                <img src="images/roadmap/6.png" alt="">
+            </div>
+        </section>
     </main>
+
+    <!-- footer -->
+    <footer class="footer_container">
+        <p class="footer_description">All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
