--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <section class="sponsor">
             <div class="sponsor_info">
                 <h2 class="primary_color primary_font sponsor_title">Our Sponsors</h2>
-                <p class="secondary_color secondary_font">a person or organization that pays for or contributes to the costs involved <br/> in staging a sporting or artistic event in return for advertising.</p>
+                <p class="secondary_color secondary_font sponsor_description">a person or organization that pays for or contributes to the costs involved <br/> in staging a sporting or artistic event in return for advertising.</p>
             </div>
 
             <div class="sponsors">
@@ -165,8 +165,12 @@
         </section>
     </main>
     <!-- footer -->
-    <footer class="footer_container">
-        <p class="footer_description">All rights reserved copyright@2023 startup landing page design</p>
+    <footer>
+        <div class="footer_container">
+                <div class="footer_description">
+                    <p>All rights reserved copyright@2023 startup landing page design</p>
+                </div>
+        </div>
     </footer>
 </body>
 </html>
